--- a/compute_grid/Use_nn_model.ipynb
+++ b/compute_grid/Use_nn_model.ipynb
@@ -2273,7 +2273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2287,7 +2287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
