Added some comments

--- a/spots.ipynb
+++ b/spots.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1701053237.032187       1 tfrt_cpu_pjrt_client.cc:349] TfrtCpuClient created.\n"
+      "I0000 00:00:1701054963.990924       1 tfrt_cpu_pjrt_client.cc:349] TfrtCpuClient created.\n"
      ]
     },
     {
@@ -114,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x29365e2d0>]"
+       "[<matplotlib.lines.Line2D at 0x29394b850>]"
       ]
      },
      "execution_count": 7,
@@ -163,117 +163,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array([[1.68145433e+15, 1.20003811e+14],\n",
-       "       [2.01870563e+15, 1.44453809e+14],\n",
-       "       [1.80053404e+15, 1.28364568e+14],\n",
-       "       [2.08556149e+15, 1.48398217e+14],\n",
-       "       [2.21380626e+15, 1.57361142e+14],\n",
-       "       [2.78948650e+15, 1.99549549e+14],\n",
-       "       [2.54043021e+15, 1.78612221e+14],\n",
-       "       [2.89960141e+15, 2.05389933e+14],\n",
-       "       [2.03280158e+15, 1.43970559e+14],\n",
-       "       [2.15508641e+15, 1.52603057e+14],\n",
-       "       [2.32818071e+15, 1.71892963e+14],\n",
-       "       [1.55393917e+15, 1.16509779e+14],\n",
-       "       [2.41690104e+15, 1.70119796e+14],\n",
-       "       [1.65433966e+15, 1.18087676e+14],\n",
-       "       [1.50642354e+15, 1.09660086e+14],\n",
-       "       [1.51921556e+15, 1.14413533e+14],\n",
-       "       [1.78591706e+15, 1.27495953e+14],\n",
-       "       [1.93664370e+15, 1.37074955e+14],\n",
-       "       [2.10612969e+15, 1.48871150e+14],\n",
-       "       [2.30525820e+15, 1.62495793e+14],\n",
-       "       [3.11442843e+15, 2.18815632e+14],\n",
-       "       [3.00790706e+15, 2.27267255e+14],\n",
-       "       [3.31069608e+15, 2.31925164e+14],\n",
-       "       [3.35956315e+15, 2.33865986e+14],\n",
-       "       [3.36018887e+15, 2.33849041e+14],\n",
-       "       [3.34062100e+15, 2.33217748e+14],\n",
-       "       [3.34358480e+15, 2.32738892e+14],\n",
-       "       [3.30565997e+15, 2.30184863e+14],\n",
-       "       [3.26191170e+15, 2.27288210e+14],\n",
-       "       [3.22842840e+15, 2.24973256e+14],\n",
-       "       [3.17447932e+15, 2.21304263e+14],\n",
-       "       [3.11660973e+15, 2.17398913e+14],\n",
-       "       [3.06723694e+15, 2.14035736e+14],\n",
-       "       [2.99779188e+15, 2.09326237e+14],\n",
-       "       [2.94727662e+15, 2.05906101e+14],\n",
-       "       [2.87761520e+15, 2.01186301e+14],\n",
-       "       [2.81098925e+15, 1.96674857e+14],\n",
-       "       [2.74158017e+15, 1.92117729e+14],\n",
-       "       [2.67363191e+15, 1.87336793e+14],\n",
-       "       [2.60165389e+15, 1.82446318e+14],\n",
-       "       [2.53640233e+15, 1.77989686e+14],\n",
-       "       [2.46430970e+15, 1.73099782e+14],\n",
-       "       [2.39603099e+15, 1.68435917e+14],\n",
-       "       [2.33136113e+15, 1.64022284e+14],\n",
-       "       [2.26407215e+15, 1.59411419e+14],\n",
-       "       [2.19655781e+15, 1.54986294e+14],\n",
-       "       [2.13828692e+15, 1.50823397e+14],\n",
-       "       [2.07460007e+15, 1.46455180e+14],\n",
-       "       [2.00989289e+15, 1.42011886e+14],\n",
-       "       [1.95097869e+15, 1.37981864e+14],\n",
-       "       [1.89530625e+15, 1.34156919e+14],\n",
-       "       [1.83940538e+15, 1.30314316e+14],\n",
-       "       [1.78618107e+15, 1.26658527e+14],\n",
-       "       [1.73838399e+15, 1.23391634e+14],\n",
-       "       [1.68567897e+15, 1.19735845e+14],\n",
-       "       [1.63619517e+15, 1.16328778e+14],\n",
-       "       [1.59545043e+15, 1.13521849e+14],\n",
-       "       [1.61491670e+15, 1.14872717e+14],\n",
-       "       [1.67143847e+15, 1.18781028e+14],\n",
-       "       [1.67742793e+15, 1.19215063e+14],\n",
-       "       [1.72562820e+15, 1.22504471e+14],\n",
-       "       [1.78776255e+15, 1.27063017e+14],\n",
-       "       [1.71931514e+15, 1.22181007e+14],\n",
-       "       [1.74963962e+15, 1.24223557e+14],\n",
-       "       [1.73855874e+15, 1.23553769e+14],\n",
-       "       [1.74087426e+15, 1.23947262e+14],\n",
-       "       [1.74577522e+15, 1.25001777e+14],\n",
-       "       [1.81474340e+15, 1.28650997e+14],\n",
-       "       [1.84973813e+15, 1.31230377e+14],\n",
-       "       [1.76063916e+15, 1.25079757e+14],\n",
-       "       [1.80415913e+15, 1.27928680e+14],\n",
-       "       [1.81763043e+15, 1.28942871e+14],\n",
-       "       [1.89320924e+15, 1.34070919e+14],\n",
-       "       [1.80475009e+15, 1.30675957e+14],\n",
-       "       [2.11246745e+15, 1.49078885e+14],\n",
-       "       [2.11327745e+15, 1.49172536e+14],\n",
-       "       [2.16717715e+15, 1.54379311e+14],\n",
-       "       [2.15612714e+15, 1.52689879e+14],\n",
-       "       [2.05609762e+15, 1.45252204e+14],\n",
-       "       [2.06174751e+15, 1.45766643e+14],\n",
-       "       [2.15848306e+15, 1.53835159e+14],\n",
-       "       [2.30874652e+15, 1.62542551e+14],\n",
-       "       [2.41380517e+15, 1.69719793e+14],\n",
-       "       [2.11851772e+15, 1.50877051e+14],\n",
-       "       [2.31186896e+15, 1.63125744e+14],\n",
-       "       [2.31302565e+15, 1.63334351e+14],\n",
-       "       [2.30524558e+15, 1.62327467e+14],\n",
-       "       [2.22976328e+15, 1.57140841e+14],\n",
-       "       [2.35781491e+15, 1.66030601e+14],\n",
-       "       [2.20283544e+15, 1.55291891e+14],\n",
-       "       [2.09750244e+15, 1.48091882e+14],\n",
-       "       [2.13375841e+15, 1.50575866e+14],\n",
-       "       [2.15581186e+15, 1.52080195e+14],\n",
-       "       [2.23260560e+15, 1.57947607e+14],\n",
-       "       [2.14899266e+15, 1.52404801e+14],\n",
-       "       [2.18007520e+15, 1.55317124e+14],\n",
-       "       [2.21038063e+15, 1.57298966e+14],\n",
-       "       [2.21268729e+15, 1.57405384e+14],\n",
-       "       [2.37455669e+15, 1.72514643e+14],\n",
-       "       [2.16117386e+15, 1.55508233e+14]], dtype=float32)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spectrum_flash_sum(flux,\n",
     "                   jnp.log10(jnp.linspace(1000., 15000., 100)),\n",
@@ -285,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
