Add plot mesh and spectrum util plot function

--- a/rotation.ipynb
+++ b/rotation.ipynb
@@ -14,16 +14,14 @@
    "outputs": [],
    "source": [
     "from models import MeshModel, IcosphereModel\n",
-    "from jax.typing import ArrayLike\n",
     "from models.mesh_transform import add_rotation, evaluate_rotation\n",
     "from models.spots import add_spots\n",
     "from plots import plot_3D\n",
     "from spectrum import simulate_spectrum\n",
     "import astropy.units as u\n",
-    "import astropy.constants as const\n",
     "import jax.numpy as jnp\n",
     "import numpy as np\n",
-    "from transformer_payne import TransformerPayne, BlackbodyFlux\n",
+    "from transformer_payne import BlackbodyFlux\n",
     "\n",
     "from jax import config\n",
     "config.update('jax_platform_name', 'cpu')\n",
@@ -177,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plots.plot_mesh import plot_3D\n"
+    "from plots.plot_mesh import plot_3D_mesh_and_spectrum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -201,25 +199,12 @@
     }
    ],
    "source": [
-    "i = 0\n",
-    "\n",
-    "fig = plt.figure(figsize=(24, 10))\n",
-    "spec = fig.add_gridspec(10, 24)\n",
-    "plot_ax = fig.add_subplot(spec[:, :10], projection='3d')\n",
-    "plot_ax.view_init(elev=30, azim=-60)\n",
-    "\n",
-    "spectrum_ax = fig.add_subplot(spec[3:7, 11:-1])\n",
-    "spectrum_ax.set_xlabel('wavelength [$\\\\AA$]', fontsize=13)\n",
-    "spectrum_ax.set_ylabel('intensity [erg/s/cm$^2$]', fontsize=13)\n",
-    "\n",
-    "plt.plot(vws, specs[i], color='black')\n",
-    "\n",
-    "plot_3D(mts[i], 0, (fig, plot_ax), cmap='spring', property_label='effective temperature [K]');"
+    "plot_3D_mesh_and_spectrum(mts[0], vws, specs[0], dict(property=0, cmap='spring', property_label='effective temperature [K]'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -234,21 +219,15 @@
     }
    ],
    "source": [
-    "i = 10\n",
-    "\n",
-    "fig = plt.figure(figsize=(24, 10))\n",
-    "spec = fig.add_gridspec(10, 24)\n",
-    "plot_ax = fig.add_subplot(spec[:, :10], projection='3d')\n",
-    "plot_ax.view_init(elev=30, azim=-60)\n",
-    "\n",
-    "spectrum_ax = fig.add_subplot(spec[3:7, 11:-1])\n",
-    "spectrum_ax.set_xlabel('wavelength [$\\\\AA$]', fontsize=13)\n",
-    "spectrum_ax.set_ylabel('intensity [erg/s/cm$^2$]', fontsize=13)\n",
-    "\n",
-    "plt.plot(vws, specs[i], color='black')\n",
-    "\n",
-    "plot_3D(mts[i], 0, (fig, plot_ax), cmap='spring', property_label='effective temperature [K]');"
+    "plot_3D_mesh_and_spectrum(mts[10], vws, specs[10], dict(property=0, cmap='spring', property_label='effective temperature [K]'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
