--- a/tutorial/solar_constant.ipynb
+++ b/tutorial/solar_constant.ipynb
@@ -14,11 +14,10 @@
    "outputs": [],
    "source": [
     "from spice.models import IcosphereModel\n",
-    "from spice.spectrum import simulate_spectrum, filter_responses\n",
+    "from spice.spectrum import simulate_spectrum\n",
     "import astropy.units as u\n",
-    "from speclite import filters\n",
     "import jax.numpy as jnp\n",
-    "from transformer_payne import TransformerPayne, Blackbody\n",
+    "from transformer_payne import Blackbody\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from jax import config\n",
@@ -213,13 +212,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun's bolometric luminosity: 3.759724164956472e+33 erg/s\n",
-      "Sun's absolute bolometric luminosity: 4.759510040627399 mag\n"
+      "Sun's bolometric luminosity: 2.55835133740356e+37 erg/s\n",
+      "Sun's absolute bolometric luminosity: -4.822500464330406 mag\n"
      ]
     }
    ],
    "source": [
-    "solar_luminosity = luminosity(bb.flux, model, jnp.log10(vws))\n",
+    "solar_luminosity = luminosity(bb.flux, model, vws)\n",
     "print(\"Sun's bolometric luminosity:\", solar_luminosity, \"erg/s\")\n",
     "print(\"Sun's absolute bolometric luminosity:\", absolute_bol_luminosity(solar_luminosity), \"mag\")"
    ]
