[WIP] Rename the pulsation notebook

--- a/tutorial/black_body_pulsation.ipynb
+++ b/tutorial/black_body_pulsation.ipynb
@@ -126,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x140f2e2d0>]"
+       "[<matplotlib.lines.Line2D at 0x17f6629d0>]"
       ]
      },
      "execution_count": 6,
@@ -231,7 +231,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x31beba4d0>"
+       "<matplotlib.collections.PathCollection at 0x31c4dad10>"
       ]
      },
      "execution_count": 11,
@@ -257,22 +257,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([[ 8.04660973e+09, -1.23703411e+10, -1.05066587e+09],\n",
-       "       [ 9.90858560e+09, -1.20047888e+10, -2.39581271e+09],\n",
-       "       [ 6.94252253e+09, -1.17461636e+10, -2.81561112e+09],\n",
+       "Array([[  80466.09730206, -123703.41085764,  -10506.65871047],\n",
+       "       [  99085.85597948, -120047.88840504,  -23958.12706322],\n",
+       "       [  69425.22530681, -117461.63567778,  -28156.11117453],\n",
        "       ...,\n",
-       "       [ 1.15622787e+10,  5.72341612e+09,  0.00000000e+00],\n",
-       "       [ 9.07890336e+09,  2.98213748e+09,  7.85871085e+08],\n",
-       "       [ 1.01043496e+10,  3.85951814e+09,  0.00000000e+00]],      dtype=float64)"
+       "       [ 115622.78697447,   57234.16115548,       0.        ],\n",
+       "       [  90789.03359891,   29821.37479485,    7858.71085106],\n",
+       "       [ 101043.49580177,   38595.18137767,       0.        ]],      dtype=float64)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,18 +311,6 @@
     "import matplotlib.pyplot as plt\n",
     "plt.scatter(m.centers[m.centers[:, 2]>0, 0], m.centers[m.centers[:, 2]>0, 1])\n",
     "plt.scatter(mp.centers[mp.centers[:, 2]>0, 0], mp.centers[mp.centers[:, 2]>0, 1], c=mp.los_velocities[mp.centers[:, 2]>0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_harmonics_params(n_max: int):\n",
-    "    n = int(jnp.sqrt(n_max))\n",
-    "    x, y = jnp.meshgrid(jnp.arange(0, n), jnp.arange(0, n))\n",
-    "    return jnp.vstack([x.ravel(), y.ravel()]).T"
    ]
   },
   {
