[WIP] Phoebe binaries

--- a/tutorial/phoebe_binary.ipynb
+++ b/tutorial/phoebe_binary.ipynb
@@ -84,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 40.82it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 39.21it/s]\n"
      ]
     },
     {
@@ -100,7 +100,7 @@
        "<ParameterSet: 637 parameters | kinds: orb, mesh>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        " 6.72810764e-11 7.59214093e-11 8.45635075e-11] solRad | keys: description, value, default_unit, visible_if, required_shape, copy_for, readonly, advanced, latexfmt>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,14 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,67 +160,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Parameter: ws=[-2.65 -2.65 -2.65 ... -2.65 -2.65 -2.65] solRad | keys: description, value, default_unit, visible_if, required_shape, copy_for, readonly, advanced, latexfmt>"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.get_parameter(qualifier='ws', dataset='orb01', component='primary')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['mesh01', 'orb01']"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from spice.models.binary import Binary\n",
+    "from spice.models.binary import Binary, PhoebeBinary\n",
     "\n",
-    "binary = Binary.from_bodies(pm1, pm2)"
+    "binary = Binary.from_bodies(pm1, pm2)\n",
+    "pb = PhoebeBinary.construct(p1, 0., bb.parameter_names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x173adee10>"
+       "<matplotlib.collections.PathCollection at 0x175d0b9d0>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -245,9 +199,29 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.scatter(binary.body1.centers[:, 0], binary.body1.centers[:, 2])\n",
+    "plt.scatter(pb.body1.centers[:, 0], pb.body1.centers[:, 2])\n",
     "\n",
-    "plt.scatter(binary.body2.centers[:, 0], binary.body2.centers[:, 2])"
+    "plt.scatter(pb.body2.centers[:, 0], pb.body2.centers[:, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0027378507871321013"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.day.to(u.year)"
    ]
   },
   {
@@ -304,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
