[WIP] updated PHOEBE binary cast areas

--- a/tutorial/phoebe.ipynb
+++ b/tutorial/phoebe.ipynb
@@ -50,13 +50,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 153.11it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 155.61it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<ParameterSet: 312 parameters | qualifiers: vzs, vvs, loggs, nvs, visible_centroids, rprojs, rs, visibilities, comments, uvw_elements, xyz_elements, uvw_normals, teffs, us, times, ys, vxs, nys, vws, volume, mus, vs, xs, vus, xyz_normals, nus, nzs, nxs, nws, areas, ws, zs, vys>"
+       "<ParameterSet: 312 parameters | qualifiers: visible_centroids, xs, nus, vys, us, ys, uvw_normals, xyz_normals, teffs, comments, vxs, loggs, rs, areas, vus, ws, times, volume, mus, nxs, vs, vzs, vws, visibilities, vvs, rprojs, nws, uvw_elements, xyz_elements, nys, nzs, nvs, zs>"
       ]
      },
      "execution_count": 2,
