--- a/tutorial/phoebe.ipynb
+++ b/tutorial/phoebe.ipynb
@@ -2,19 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PHOEBE: passband \"Bolometric:900-40000\" has a newer version available.  Run phoebe.list_passband_online_history(\"Bolometric:900-40000\") to get a list of available changes and phoebe.update_passband(\"Bolometric:900-40000\") or phoebe.update_all_passbands() to update.\n",
-      "PHOEBE: passband \"Johnson:V\" has a newer version available.  Run phoebe.list_passband_online_history(\"Johnson:V\") to get a list of available changes and phoebe.update_passband(\"Johnson:V\") or phoebe.update_all_passbands() to update.\n",
-      "PHOEBE: passband \"Stromgren:b\" has a newer version available.  Run phoebe.list_passband_online_history(\"Stromgren:b\") to get a list of available changes and phoebe.update_passband(\"Stromgren:b\") or phoebe.update_all_passbands() to update.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-22T19:07:41.971792Z",
+     "start_time": "2024-07-22T19:07:39.555981Z"
     }
-   ],
+   },
    "source": [
     "import phoebe\n",
     "import numpy as np\n",
@@ -26,7 +19,27 @@
     "%matplotlib inline\n",
     "\n",
     "from phoebe.parameters.dataset import _mesh_columns"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/majajablonska/miniconda/envs/tp-env/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PHOEBE: passband \"Bolometric:900-40000\" has a newer version available.  Run phoebe.list_passband_online_history(\"Bolometric:900-40000\") to get a list of available changes and phoebe.update_passband(\"Bolometric:900-40000\") or phoebe.update_all_passbands() to update.\n",
+      "PHOEBE: passband \"Johnson:V\" has a newer version available.  Run phoebe.list_passband_online_history(\"Johnson:V\") to get a list of available changes and phoebe.update_passband(\"Johnson:V\") or phoebe.update_all_passbands() to update.\n",
+      "PHOEBE: passband \"Stromgren:b\" has a newer version available.  Run phoebe.list_passband_online_history(\"Stromgren:b\") to get a list of available changes and phoebe.update_passband(\"Stromgren:b\") or phoebe.update_all_passbands() to update.\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -43,27 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 155.61it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<ParameterSet: 312 parameters | qualifiers: visible_centroids, xs, nus, vys, us, ys, uvw_normals, xyz_normals, teffs, comments, vxs, loggs, rs, areas, vus, ws, times, volume, mus, nxs, vs, vzs, vws, visibilities, vvs, rprojs, nws, uvw_elements, xyz_elements, nys, nzs, nvs, zs>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T19:56:22.636331Z",
+     "start_time": "2024-07-21T19:56:22.157674Z"
     }
-   ],
+   },
    "source": [
     "b = phoebe.default_star()\n",
     "b.set_quantity('teff', 5780)\n",
@@ -73,7 +71,27 @@
     "\n",
     "b.add_dataset('mesh', compute_times=times, columns=COLUMNS, dataset='mesh01')\n",
     "b.run_compute(irrad_method='none', coordinates='uvw', overwrite=True)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 148.94it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<ParameterSet: 312 parameters | qualifiers: rs, volume, ws, vs, xs, rprojs, uvw_normals, visible_centroids, vzs, mus, times, comments, zs, nws, nys, nus, loggs, vvs, areas, ys, teffs, vys, uvw_elements, vus, nzs, nvs, xyz_normals, vws, xyz_elements, visibilities, vxs, us, nxs>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -84,8 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T19:56:25.320375Z",
+     "start_time": "2024-07-21T19:56:25.256191Z"
+    }
+   },
+   "source": [
+    "b.get_parameter('distance')"
+   ],
    "outputs": [
     {
      "data": {
@@ -98,19 +123,22 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "b.get_parameter('distance')"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T19:56:25.768738Z",
+     "start_time": "2024-07-21T19:56:25.764820Z"
+    }
+   },
    "source": [
     "from spice.models.phoebe_utils import PhoebeConfig\n",
     "p = PhoebeConfig(b, 'mesh01')"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -123,14 +151,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T19:56:28.835855Z",
+     "start_time": "2024-07-21T19:56:28.800993Z"
+    }
+   },
    "source": [
     "bb = Blackbody()\n",
     "pm = PhoebeModel.construct(p, times[0], bb.parameter_names)\n",
     "pm2 = PhoebeModel.construct(p, times[5], bb.parameter_names)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
