--- a/tutorial/phoebe_binary_plot.ipynb
+++ b/tutorial/phoebe_binary_plot.ipynb
@@ -39,13 +39,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 43.01it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 43.05it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<ParameterSet: 639 parameters | kinds: orb, lc, mesh>"
+       "<ParameterSet: 639 parameters | kinds: orb, mesh, lc>"
       ]
      },
      "execution_count": 2,
@@ -77,29 +77,6 @@
     "bb = Blackbody()\n",
     "p1 = PhoebeConfig(b, 'mesh01', 'orb01')\n",
     "pb = PhoebeBinary.construct(p1, bb.parameter_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$0 \\; \\mathrm{}$"
-      ],
-      "text/plain": [
-       "<Quantity 0.>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.get_quantity('abun', component='primary')"
    ]
   },
   {
@@ -232,7 +209,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x13dfae210>]"
+       "[<matplotlib.lines.Line2D at 0x1445203b0>]"
       ]
      },
      "execution_count": 13,
@@ -263,7 +240,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1494563f0>]"
+       "[<matplotlib.lines.Line2D at 0x1444e4b30>]"
       ]
      },
      "execution_count": 14,
