Updated observed flux

--- a/tutorial/black_body_solar_constant.ipynb
+++ b/tutorial/black_body_solar_constant.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:28:08.465889Z",
-     "start_time": "2024-08-30T03:28:05.554605Z"
+     "end_time": "2024-08-30T04:15:21.165336Z",
+     "start_time": "2024-08-30T04:15:17.775658Z"
     }
    },
    "source": [
@@ -60,8 +60,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:28:08.698417Z",
-     "start_time": "2024-08-30T03:28:08.485864Z"
+     "end_time": "2024-08-30T04:15:21.477556Z",
+     "start_time": "2024-08-30T04:15:21.216865Z"
     }
    },
    "source": [
@@ -88,8 +88,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:42:39.703091Z",
-     "start_time": "2024-08-30T03:42:39.646541Z"
+     "end_time": "2024-08-30T04:15:21.545204Z",
+     "start_time": "2024-08-30T04:15:21.527565Z"
     }
    },
    "cell_type": "code",
@@ -101,12 +101,12 @@
        "Array(0., dtype=float64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 43
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -119,20 +119,20 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:42:41.736331Z",
-     "start_time": "2024-08-30T03:42:41.720068Z"
+     "end_time": "2024-08-30T04:15:21.566796Z",
+     "start_time": "2024-08-30T04:15:21.551598Z"
     }
    },
    "source": "vws = jnp.linspace(1., 100000., 20000)",
    "outputs": [],
-   "execution_count": 44
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:42:46.202517Z",
-     "start_time": "2024-08-30T03:42:42.643287Z"
+     "end_time": "2024-08-30T04:15:23.963734Z",
+     "start_time": "2024-08-30T04:15:21.573797Z"
     }
    },
    "source": [
@@ -148,7 +148,7 @@
        "Text(0, 0.5, 'Intensity [erg/s/cm$^3$]')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -163,7 +163,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 45
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -173,8 +173,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:01.923124Z",
-     "start_time": "2024-08-30T03:42:59.220624Z"
+     "end_time": "2024-08-30T04:15:26.196443Z",
+     "start_time": "2024-08-30T04:15:23.977076Z"
     }
    },
    "cell_type": "code",
@@ -191,7 +191,7 @@
        "Text(0, 0.5, 'Flux')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -206,7 +206,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 46
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -216,8 +216,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:01.941485Z",
-     "start_time": "2024-08-30T03:43:01.931835Z"
+     "end_time": "2024-08-30T04:15:26.256238Z",
+     "start_time": "2024-08-30T04:15:26.210822Z"
     }
    },
    "cell_type": "code",
@@ -228,7 +228,7 @@
     "bb_synphot = SourceSpectrum(Empirical1D, points=vws, lookup_table=i_bb[:, 0]/1e8*units.FLAM)"
    ],
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -238,8 +238,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:02.007998Z",
-     "start_time": "2024-08-30T03:43:01.955382Z"
+     "end_time": "2024-08-30T04:15:26.320520Z",
+     "start_time": "2024-08-30T04:15:26.265338Z"
     }
    },
    "cell_type": "code",
@@ -256,13 +256,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 48
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:02.197013Z",
-     "start_time": "2024-08-30T03:43:02.162135Z"
+     "end_time": "2024-08-30T04:15:26.444035Z",
+     "start_time": "2024-08-30T04:15:26.331250Z"
     }
    },
    "cell_type": "code",
@@ -280,12 +280,12 @@
       ],
       "text/latex": "$4.9475022 \\; \\mathrm{mag}$$\\mathrm{\\left( \\mathrm{AB} \\right)}$"
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 49
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -305,20 +305,20 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:04.198121Z",
-     "start_time": "2024-08-30T03:43:04.193382Z"
+     "end_time": "2024-08-30T04:15:26.457629Z",
+     "start_time": "2024-08-30T04:15:26.455325Z"
     }
    },
    "source": "from spice.spectrum.filter import *",
    "outputs": [],
-   "execution_count": 50
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:04.413795Z",
-     "start_time": "2024-08-30T03:43:04.400671Z"
+     "end_time": "2024-08-30T04:15:26.802714Z",
+     "start_time": "2024-08-30T04:15:26.471231Z"
     }
    },
    "source": [
@@ -328,14 +328,14 @@
     "johnson_v = JohnsonV()"
    ],
    "outputs": [],
-   "execution_count": 51
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:04.930853Z",
-     "start_time": "2024-08-30T03:43:04.784961Z"
+     "end_time": "2024-08-30T04:15:27.065828Z",
+     "start_time": "2024-08-30T04:15:26.811455Z"
     }
    },
    "source": [
@@ -355,7 +355,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 52
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -367,8 +367,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:06.382003Z",
-     "start_time": "2024-08-30T03:43:06.375721Z"
+     "end_time": "2024-08-30T04:15:27.079159Z",
+     "start_time": "2024-08-30T04:15:27.075927Z"
     }
    },
    "cell_type": "code",
@@ -386,13 +386,13 @@
     "C: float = 299792.458  # km/s"
    ],
    "outputs": [],
-   "execution_count": 53
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:06.670890Z",
-     "start_time": "2024-08-30T03:43:06.664243Z"
+     "end_time": "2024-08-30T04:15:27.096178Z",
+     "start_time": "2024-08-30T04:15:27.090954Z"
     }
    },
    "cell_type": "code",
@@ -467,13 +467,13 @@
     "    )-48.60"
    ],
    "outputs": [],
-   "execution_count": 54
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:07.225807Z",
-     "start_time": "2024-08-30T03:43:07.202109Z"
+     "end_time": "2024-08-30T04:15:27.270594Z",
+     "start_time": "2024-08-30T04:15:27.111081Z"
     }
    },
    "cell_type": "code",
@@ -485,12 +485,12 @@
        "Array(4.80554859, dtype=float64)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 55
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -505,23 +505,47 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:37.622491Z",
-     "start_time": "2024-08-30T03:43:37.536238Z"
+     "end_time": "2024-08-30T04:16:10.549997Z",
+     "start_time": "2024-08-30T04:16:10.540742Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "0.5*np.pi*i_bb[:, 0]/f_bb[:, 0]",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([       nan,        nan,        nan, ..., 0.33333931, 0.33333931,\n",
+       "       0.33333931], dtype=float64)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-30T04:15:27.400714Z",
+     "start_time": "2024-08-30T04:15:27.349042Z"
     }
    },
    "cell_type": "code",
    "source": [
     "plt.plot(0.5*np.pi*i_bb[:, 0])\n",
-    "plt.plot(f_bb[:, 0])"
+    "plt.plot(f_bb[:, 0])\n"
    ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x315c1ba50>]"
+       "[<matplotlib.lines.Line2D at 0x3156fd410>]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -536,14 +560,14 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 57
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:39.807213Z",
-     "start_time": "2024-08-30T03:43:39.779848Z"
+     "end_time": "2024-08-30T04:15:27.523919Z",
+     "start_time": "2024-08-30T04:15:27.500549Z"
     }
    },
    "source": [
@@ -572,13 +596,13 @@
      ]
     }
    ],
-   "execution_count": 58
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:41.314330Z",
-     "start_time": "2024-08-30T03:43:40.911198Z"
+     "end_time": "2024-08-30T04:15:27.858108Z",
+     "start_time": "2024-08-30T04:15:27.576990Z"
     }
    },
    "cell_type": "code",
@@ -590,12 +614,12 @@
        "Array(6.11519807, dtype=float64)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 59
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -610,22 +634,22 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:41.397599Z",
-     "start_time": "2024-08-30T03:43:41.395440Z"
+     "end_time": "2024-08-30T04:15:27.882409Z",
+     "start_time": "2024-08-30T04:15:27.879291Z"
     }
    },
    "source": [
     "from spice.spectrum import luminosity, absolute_bol_luminosity"
    ],
    "outputs": [],
-   "execution_count": 60
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:44.382424Z",
-     "start_time": "2024-08-30T03:43:41.419210Z"
+     "end_time": "2024-08-30T04:15:30.130824Z",
+     "start_time": "2024-08-30T04:15:27.910763Z"
     }
    },
    "source": [
@@ -643,7 +667,7 @@
      ]
     }
    ],
-   "execution_count": 61
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -657,8 +681,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:44.483070Z",
-     "start_time": "2024-08-30T03:43:44.480403Z"
+     "end_time": "2024-08-30T04:15:30.150557Z",
+     "start_time": "2024-08-30T04:15:30.147634Z"
     }
    },
    "cell_type": "code",
@@ -675,13 +699,13 @@
      ]
     }
    ],
-   "execution_count": 62
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:44.565157Z",
-     "start_time": "2024-08-30T03:43:44.562117Z"
+     "end_time": "2024-08-30T04:15:30.177168Z",
+     "start_time": "2024-08-30T04:15:30.174053Z"
     }
    },
    "cell_type": "code",
@@ -693,19 +717,19 @@
        "2.517246717226292e+30"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 63
+   "execution_count": 22
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T03:43:44.618085Z",
-     "start_time": "2024-08-30T03:43:44.615712Z"
+     "end_time": "2024-08-30T04:15:30.207338Z",
+     "start_time": "2024-08-30T04:15:30.204945Z"
     }
    },
    "source": "u.solLum.to(u.erg/u.s)",
@@ -716,19 +740,24 @@
        "3.8279999999999997e+33"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 64
+   "execution_count": 23
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-30T04:15:30.218040Z",
+     "start_time": "2024-08-30T04:15:30.216892Z"
+    }
+   },
    "cell_type": "code",
+   "source": "",
    "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": null
   }
  ],
  "metadata": {
